--- a/css/style.css
+++ b/css/style.css
@@ -125,3 +125,41 @@ body {
 
 /*===============Block 11/ =================*/
 /*Сложные фоновые узоры*/
+.block__11 {
+    width: 150px;
+    height: 150px;
+    background: #fff;
+    background-image: linear-gradient(90deg, rgba(200,0,0,.5) 50%, transparent 0),
+                    linear-gradient(rgba(200,0,0,.5) 50%, transparent 0);
+    background-size: 30px 30px;
+}
+
+.block__12 {
+    width: 150px;
+    height: 150px;
+    background: #58a;
+    background-image: linear-gradient(white 1px, transparent 0),
+    linear-gradient(90deg, white 1px, transparent 0);
+    background-size: 30px 30px;
+}
+
+.block__13 {
+    width: 150px;
+    height: 150px;
+    background: #58a;
+    background-image: linear-gradient(white 2px, transparent 0),
+    linear-gradient(90deg, white 2px, transparent 0),
+    linear-gradient(hsla(0,0%,100%,.3) 1px, transparent 0),
+    linear-gradient(90deg, hsla(0,0%,100%,.3) 1px, transparent 0);
+    background-size: 30px 30px;
+}
+
+.block__14 {
+    width: 150px;
+    height: 150px;
+    background: #655;
+    background-image: radial-gradient(tan 30%, transparent 0),
+    radial-gradient(tan 30%, transparent 0);
+    background-size: 30px 30px;
+    background-position: 0 0, 15px 15px;
+}
